--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "apexcharts": "^5.3.6",
+        "react-apexcharts": "^1.8.0",
+        "sweetalert2": "^11.26.3",
+        "trix": "^2.1.15"
     }
 }
